--- a/src/pattern-library/assets/sass/components/_buttons.scss
+++ b/src/pattern-library/assets/sass/components/_buttons.scss
@@ -3,11 +3,11 @@
 	@include text-md;
 	border: 1px solid $color-link;
 	border-radius: 4px;
-	padding: calc( #{ $margin-vertical-sm / 4 } + 1px ) $gutter-width;
+	padding: calc( #{ $margin-vertical-sm * 0.25 } + 1px ) $gutter-width;
 	background: $color-link;
 	color: $color-white;
-	margin-bottom: $margin-vertical-sm / 2;
-	margin-right: $gutter-width / 2;
+	margin-bottom: $margin-vertical-sm * 0.5;
+	margin-right: $gutter-width * 0.5;
 	display: inline-block;
 	text-align: center;
 	cursor: pointer;
@@ -128,7 +128,7 @@
 .btn--small {
 	@include text-std;
 	border-width: 1px;
-	padding: 0 #{ $gutter-width / 2 };
+	padding: 0 #{ $gutter-width * 0.5 };
 }
 
 .btn--loading {
@@ -139,7 +139,7 @@
 
 	.loading--active {
 		@extend .loading--white;
-		margin-left: $gutter-width / 2;
+		margin-left: $gutter-width * 0.5;
 		margin-bottom: -1px;
 	}
 
