--- a/src/pattern-library/assets/sass/components/_swatch.scss
+++ b/src/pattern-library/assets/sass/components/_swatch.scss
@@ -32,13 +32,13 @@
 	@include text-sm;
 	display: block;
 	text-align: center;
-	margin: #{ $margin-vertical-sm / 4 } 0 0;
+	margin: #{ $margin-vertical-sm * 0.25 } 0 0;
 }
 
 .swatch--border {
 	height: auto;
 
 	hr {
-		margin: #{ $margin-vertical-sm / 2 } 0;
+		margin: #{ $margin-vertical-sm * 0.5 } 0;
 	}
 }
