--- a/src/pattern-library/assets/sass/components/_tag-cloud.scss
+++ b/src/pattern-library/assets/sass/components/_tag-cloud.scss
@@ -5,10 +5,10 @@
 	a {
 
 		display: inline-block;
-		margin-bottom: $margin-vertical-sm / 2;
+		margin-bottom: $margin-vertical-sm * 0.5;
 
 		+ a {
-			margin-left: $gutter-width / 4;
+			margin-left: $gutter-width * 0.25;
 		}
 
 	}
