--- a/src/editor-style.scss
+++ b/src/editor-style.scss
@@ -1,4 +1,4 @@
-@import './pattern-library/assets/styles/juniper.css';
+@import './pattern-library/assets/sass/juniper';
 @import './components/Post/index';
 @import './components/Message/Content';
 @import './components/Message/Main';
