--- a/src/components/UserHovercard.css
+++ b/src/components/UserHovercard.css
@@ -67,3 +67,14 @@
 	margin: 0;
 	font-size: 0.9em;
 }
+
+@media ( max-width: 475px ) {
+	.UserHovercard {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.UserHovercard .Map {
+		margin: 1em auto 0;
+	}
+}
