482: Add button to collapse article on mobile

--- a/src/components/Message/Header.css
+++ b/src/components/Message/Header.css
@@ -5,7 +5,7 @@
 	padding: 15px 0;
 	background: #fff;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	min-height: 99px;
 }
 
@@ -103,22 +103,58 @@
 	margin-left: 10px;
 }
 
+.Message-Header__Collapse-Button {
+	display: none;
+	align-items: center;
+	width: 24px;
+	height: 24px;
+	margin: 10px 0 0;
+	padding: 0;
+	cursor: pointer;
+	background: rgba( 0, 0, 0, 0.02 );
+	border: 2px solid rgba(0, 0, 0, 0.1);
+	border-radius: 50%;
+	transition: border-color 100ms;
+}
+
+.Message-Header__Collapse-Button .icon {
+	width: 24px;
+	opacity: 0.3;
+	transition: opacity 100ms;
+}
+
+.Message-Header__Collapse-Button:hover,
+.Message-Header__Collapse-Button:focus {
+	border-color: rgba(0, 0, 0, 0.4);
+	transition: border-color 200ms;
+}
+
+.Message-Header__Collapse-Button:hover .icon,
+.Message-Header__Collapse-Button:focus .icon {
+	opacity: 0.8;
+	transition: opacity 200ms;
+}
+
 @media ( max-width: 600px ) {
 	.Message-Header {
 		margin: 0 -20px;
 		padding: 0.5em 20px;
 		height: auto;
-		display: block;
+		display: flex;
+		flex-direction: row-reverse;
 	}
-	.Message-Header .Avatar {
+	.Message-Header .Avatar,
+	.Message-Header__Collapse-Button {
 		margin-left: 8px;
 		margin-right: 0;
-		float: right;
 	}
 	.Message-Header .Avatar,
 	.Message-Header .Avatar img {
 		width: 24px !important;
 		height: 24px !important;
+	}
+	.Message-Header__Collapse-Button {
+		display: flex;
 	}
 	.Message-Header .Post__actions {
 		display: none;
