Improve display of comment notices in collapsed mode

--- a/src/_print.scss
+++ b/src/_print.scss
@@ -6,7 +6,8 @@
 	.Overlay,
 	.SuperMenu,
 	.Post__actions,
-	.Post-Summary-actions,
+	.Post-Summary-actions button,
+	.Post-Summary-people,
 	.Comment-Actions,
 	.Message-Header__Collapse-Button {
 		display: none;
