Update pattern library with new brand colors, see humanmade/hm-pattern-library#174

--- a/src/pattern-library/assets/sass/themes/_backgrounds.scss
+++ b/src/pattern-library/assets/sass/themes/_backgrounds.scss
@@ -29,3 +29,27 @@
 .Background-Brown {
 	background-color: $hm-brown;
 }
+
+.Background-VibrantBlue {
+	background-color: $hm-vibrant-blue;
+}
+
+.Background-DeepBlue {
+	background-color: $hm-deep-blue;
+}
+
+.Background-Mint {
+	background-color: $hm-mint;
+}
+
+.Background-AshGrey {
+	background-color: $hm-ash-grey;
+}
+
+.Background-DarkPrimary {
+	background-color: $hm-dark-red;
+}
+
+.Background-DarkVibrantBlue {
+	background-color: $hm-dark-vibrant-blue;
+}
