--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-	font-family: 'Proxima-Nova', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-weight: 400;
 	flex-direction: column;
 	flex: 1;
 	transition: transform 300ms;
