--- a/src/components/Editor/index.css
+++ b/src/components/Editor/index.css
@@ -91,7 +91,7 @@
 
 .Editor-tabs,
 .Editor-toolbar {
-	font-family: "proxima-nova", sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 0.01em;
