--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -62,7 +62,7 @@
 
 	color: var( --hm-warm-grey );
 	background: #fff;
-	border: 1px solid var( --hm-red );
+	border: 1px solid var( --hm-vibrant-blue );
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 
@@ -94,7 +94,7 @@
 
 .Dropdown__content > .btn:hover {
 	border: none;
-	background: var( --hm-red );
+	background: var( --hm-vibrant-blue );
 }
 
 .btn--tertiary .Dropdown__content > .btn:hover {
