--- a/src/components/Post/Write.css
+++ b/src/components/Post/Write.css
@@ -31,6 +31,11 @@
 	margin-top: -3px;
 }
 
+.WritePost__title .btn:hover .label__count {
+	background-color: var( --hm-white );
+	color: var( --hm-vibrant-blue );
+}
+
 .WritePost > header {
 	position: sticky;
 	top: 0;
