Set emjoi and user search dropdown highlight color.

--- a/src/components/Editor/Completion.css
+++ b/src/components/Editor/Completion.css
@@ -23,6 +23,6 @@
 }
 
 .Completion > li.selected {
-	background: var( --hm-red );
+	background: var( --hm-vibrant-blue );
 	color: var( --hm-light-grey );
 }
