--- a/src/components/Header/Logo.css
+++ b/src/components/Header/Logo.css
@@ -3,12 +3,23 @@
 	padding: 5px 0;
 	height: 45px;
 	width: 45px;
-	display: inline-block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .Logo .hm-logo {
 	width: 1.5rem;
 	height: 1.5rem;
+}
+
+.Logo__image {
+	max-width: 100%;
+	max-height: 100%;
+	width: auto;
+	height: auto;
+	object-fit: contain;
+	padding: 5px;
 }
 
 @media ( max-width: 600px ) {
