Clean up some emphasis styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,8 +11,8 @@ $base-font-size:      18px !default;
 
 $gutter-width: 15px !default;
 
-$font-family-body:    "proxima-nova", sans-serif !default;
-$font-family-heading: "proxima-nova", sans-serif !default;
+$font-family-body:    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
+$font-family-heading: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
 $font-family-code:    "Consolas", "Monaco", "Andale Mono", "Ubuntu Mono", monospace !default;
 $font-family-accent:  "din-condensed", sans-serif !default;
 
